# project-library-folder-cleanup

./: .gitignore  CMakeLists.txt  README.md
include/: ApplicationController.h  CLIApplication.h  ConfigDialog.h  ConfigurationManager.h  DeleteWorker.h  FileSystemScanner.h  FolderDeleter.h  Logger.h  MainWindow.h  PathUtils.h  SafetyValidator.h  ScanWorker.h  Version.h
src/: CMakeLists.txt
src/cli/: CLIApplication.cpp  main_cli.cpp
src/core/: ApplicationController.cpp  ConfigurationManager.cpp  FileSystemScanner.cpp  FolderDeleter.cpp  Logger.cpp  PathUtils.cpp  SafetyValidator.cpp
src/gui/: ConfigDialog.cpp  ConfigDialog.ui  DeleteWorker.cpp  MainWindow.cpp  MainWindow.ui  ScanWorker.cpp  main_gui.cpp
tests/: CMakeLists.txt
tests/helpers/: directory_tree_generator.cpp  directory_tree_generator.h  temp_directory.cpp  temp_directory.h
tests/integration/: test_cli_workflow.cpp  test_controller_workflow.cpp  test_gui_workflow.cpp
tests/property/: test_properties_deletion.cpp
tests/unit/: test_cli_parser.cpp  test_config.cpp  test_deleter.cpp  test_logger.cpp  test_path_utils.cpp  test_safety_validator.cpp  test_scanner.cpp
